@@ -32,6 +32,7 @@ Unix build, where libtool/automake/autoconf works:
             % make install
   (optional)% make perl_install
 
+
 Or using the CPAN/perlish way:
 
   (optional)% ./buildconf
@@ -43,6 +44,27 @@ Or using the CPAN/perlish way:
   (optional)% make perl_install
 
 
+Alternately, here's a recipe to install mod_apreq.c as a static apache module:
+
+  1) configure httpd to add mod_apreq.c to its filter modules:
+
+  % cd /path/to/httpd-2.0
+  % CPPFLAGS=-I/path/to/httpd-apreq-2/src \
+    HTTPD_LDFLAGS=/path/to/httpd-apreq-2/src/libapreq.la \
+    ./configure --with-module=filters:/path/to/httpd-apreq-2/env/mod_apreq.c \
+    ...(add usual httpd+apr options here)...
+
+  2) compile and install everything using httpd-apreq-2's build system:
+
+            % cd /path/to/httpd-apreq-2
+            % ./configure --with-apache2-src=/path/to/httpd-2.0
+            % make
+  (optional)% make test
+            % make httpd_install
+            % make install
+
+
+
 Win32 build:
   C:\httpd-apreq-2> perl Makefile.PL
   C:\httpd-apreq-2> nmake
@@ -50,3 +72,6 @@ Win32 build:
   C:\httpd-apreq-2> nmake mod_apreq
   C:\httpd-apreq-2> nmake perl_glue
   C:\httpd-apreq-2> nmake perl_test
+
+
+
